<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.apoorva.buildaburger.MainActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:src="@drawable/burger"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:paddingLeft="5dp"
                    android:text="Build your burger in 3 steps!"
                    android:textAlignment="gravity"
                    android:textStyle="italic"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choose Bun:"
                        android:textSize="20dp"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="end"
                        android:checkedButton="@+id/white">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/White"
                            android:textSize="20dp"
                            android:id="@+id/white"
                            android:paddingLeft="5dp"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Wheat"
                            android:textSize="20dp"
                            android:id="@+id/wheat"
                            android:paddingLeft="5dp"/>
                    </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choose Patty:"
                        android:textSize="20dp"/>
                    <Spinner
                        android:layout_weight="1"
                        android:id="@+id/patty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pick (0-3) Toppings:"
                android:textSize="20dp"
                android:paddingTop="10dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Mushrooms"
                            android:id="@+id/mushrooms"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            android:onClick="onToppingSelected"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Lettuce"
                            android:id="@+id/lettuce"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            android:onClick="onToppingSelected"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Tomatoes"
                            android:id="@+id/tomato"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            android:onClick="onToppingSelected"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Pickles"
                            android:id="@+id/pickles"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            android:onClick="onToppingSelected"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Mayo"
                            android:id="@+id/mayo"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            android:onClick="onToppingSelected"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Mustard"
                            android:id="@+id/mustard"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            android:onClick="onToppingSelected"/>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter number of burgers: "
                    android:textSize="20dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:layout_weight="3"
                    android:maxLength="2"
                    android:id="@+id/count"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Default is 1"
                android:textStyle="bold"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25dp"
                android:text="Calculate"
                android:id="@+id/calculate"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="#37AEE4"
                android:backgroundTint="#FEFBDE"
                android:backgroundTintMode="multiply"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Price: "
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="20dp"
                    android:id="@+id/price"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Calories: "
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="20dp"
                    android:id="@+id/calories"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
